My skill section added.

--- a/web pages/index.html
+++ b/web pages/index.html
@@ -23,7 +23,7 @@
   </head>
   <body style="margin: 15px; background-color: #afeeee;">
     <header>
-      <h1 class="content_header">About This Site</h1>
+      <h1 class="content_header">My Website</h1>
     </header>
     <main class="content_holder">
       <section class="about_this_site">
@@ -33,18 +33,38 @@
         </p>
       </section>
       <section class="let_us_get_an_into">
+        <h1 class="content_header">About This Site</h1>
         <p class="text">
           My name is Dhanonjoy(Dj) Saha Anogh. I live in Bangladesh. I'm in VIII
           grade. I read in ACPS in Dhaka. I'm trying to learn: HTML, CSS,
-          JavaScirpt and Python. My goal is to become a full-time progarmer. So,
+          JavaScirpt and Python. My goal is to become a full-time programer. So,
           I'm trying my best to reach my goal though I'm the journey is not long
           still I'm going on my way and I believe that I'll reach my goal one
           day.
         </p>
       </section>
-      <section class="my_skill">
-        <div class="skill_div">1</div>
-        <div class="skill_div">2</div>
+      <section class="skils">
+        <h1 class="content_header">My Skills</h1>
+        <div class="my_skill">
+          <div class="skill_div">
+            <p class="text">Language Skills</p>
+              <li class="text">Bangla</li>
+              <li class="text">English</li>
+          </div>
+          <div class="skill_div">
+            <p class="text">Coumter Skills</p>
+            <li class="text">MS Word</li>
+            <li class="text">MS Excel</li>
+            <li class="text">MS Power Piont</li>
+          </div>
+          <div class="skill_div">
+            <p class="text">AI Skill</p>
+            <li class="text">AI generated images</li>
+            <li class="text">AI generated contents</li>
+            <li class="text">Re-write contents</li>
+          </div>
+          <div class="skill_div">4</div>
+        </div>
       </section>
       <section class="my_certificate"></section>
     </main>
