Nav-bar added and included the last skill.

--- a/web pages/index.html
+++ b/web pages/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/pics/1event-management.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/css for contents/text.css" />
+    <link rel="stylesheet" href="/css/nav_bar.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,9 +22,17 @@
       rel="stylesheet"
     />
   </head>
-  <body style="margin: 15px; background-color: #afeeee;">
+  <body>
     <header>
-      <h1 class="content_header">My Website</h1>
+      <h1 style="display: inline-block;" class="content_header">My Website</h1>
+      <nav>
+        <ul class="nav_links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Me</a></li>
+          <li><a href="#">Contents</a></li>
+        </ul>
+      </nav>
+      <a href="#"><button>Contact</button></a>
     </header>
     <main class="content_holder">
       <section class="about_this_site">
@@ -63,7 +72,13 @@
             <li class="text">AI generated contents</li>
             <li class="text">Re-write contents</li>
           </div>
-          <div class="skill_div">4</div>
+          <div class="skill_div">
+            <p class="text">Internet Skill</p>
+            <li class="text">Web Research</li>
+            <li class="text">Data Collection</li>
+            <li class="text">Finding images&sol;contents</li>
+            <li class="text">PDF Editing</li>
+          </div>
         </div>
       </section>
       <section class="my_certificate"></section>
