--- a/web pages/index.html
+++ b/web pages/index.html
@@ -92,16 +92,18 @@
       </div>
       <div class="col_2">
         <h3 class="footer_text">Email Me!</h3>
-        <form>
+        <form onsubmit="sendEmail(); reset(); return false;">
           <input class="name_input" type="text" id="name" placeholder="Your Name" required>
           <br>
           <input class="email_input" type="email" id="Email" placeholder="Your Email" required>
           <br>
           <textarea class="body_input" id="message" rows="6" placeholder="Type here..." required></textarea>
           <br>
-          <button type="submit">Send</button>
+          <button type="submit" onclick="msg()">Send</button>
         </form>
       </div>
     </footer>
   </body>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="/JS/email.js"></script>
 </html>
