--- a/web pages/index.html
+++ b/web pages/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/css for contents/text.css" />
     <link rel="stylesheet" href="/css/nav_bar.css" />
     <link rel="stylesheet" href="/css/css for footer/footer-text.css" />
+    <link rel="stylesheet" href="/css/scrollbar.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -91,19 +92,8 @@
         <a class="footer_text" href="#">Contents</a>
       </div>
       <div class="col_2">
-        <h3 class="footer_text">Email Me!</h3>
-        <form onsubmit="sendEmail(); reset(); return false;">
-          <input class="name_input" type="text" id="name" placeholder="Your Name" required>
-          <br>
-          <input class="email_input" type="email" id="Email" placeholder="Your Email" required>
-          <br>
-          <textarea class="body_input" id="message" rows="6" placeholder="Type here..." required></textarea>
-          <br>
-          <button type="submit" onclick="msg()">Send</button>
-        </form>
+        <p>not completed</p>
       </div>
     </footer>
   </body>
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
-  <script src="/JS/email.js"></script>
 </html>
