--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="icon" href="/pics/1event-management.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/css for contents/text.css" />
-    <link rel="stylesheet" href="/css/nav_bar.css" />
-    <link rel="stylesheet" href="/css/css for footer/footer-text.css" />
-    <link rel="stylesheet" href="/css/scrollbar.css" />
+    <link rel="stylesheet" href="/general.css" />
+    <link rel="stylesheet" href="/text.css" />
+    <link rel="stylesheet" href="/scrollbar.css" />
+    <link rel="stylesheet" href="/footer-text.css" />
+    <link rel="stylesheet" href="/nav_bar.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
