I don't know what i did

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <a class="footer_text" href="#">Contents</a>
       </div>
       <div class="col_2">
-        <p>not completed</p>
+        <h3 class="footer_text">Contact Me</h3>
+        
       </div>
     </footer>
   </body>
