mail function added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,33 @@
       </div>
       <div class="col_2">
         <h3 class="footer_text">Contact Me</h3>
-        
+        <div id="contacts" class="row">
+          <div class="col-lg-5">
+            <p class="text" style="color: aliceblue;">My Email: dhanonjoy6a24@gmail.com</p>
+            <form action="mailto: dhanonjoy6a24@gmail.com@gmail.com?subject=message" method="POST" enctype="text/plain" target="_blank">
+              <div class="p-3 mt-4" id="contact_me">
+                  <p style="color: cyan; font-size: 25px;" class="p-3 mt-4 text-center"><i class="fa-solid fa-address-book"></i> Contact me</p>
+                  <Br>
+                  <p style="color: cyan;" class="h2 text-center">Your name</p>
+                  <Br>
+                  <input style="background-color: rgb(104 104 104);" class="form-control" type="text" placeholder="Enter your name" name="Name "required>
+                  <br>
+                  <p style="color: cyan;" class="h2 text-center">Your email</p>
+                  <br>
+                  <input style="background-color: rgb(104 104 104);" class="form-control" type="email" placeholder="Enter your email" name="Email " required>
+                    <Br>
+                  <p style="color: cyan;" class="h2 text-center">Your message</p>
+                      <Br>
+                  <input style="background-color: rgb(104 104 104);" class="form-control" type="text" placeholder="Enter your message" name="Message " required>
+                  <div class="text-center">
+                    <Br><br>
+                    <button class="p-3 m-4 btn btn-outline-success" style="font-size: 15px;" type="submit">Submit</button>
+                    <button class="p-3 m-4 btn btn-outline-success" style="font-size: 15px;" type="reset">Reset</button>
+                  </div>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
